# work_app

./: pyproject.toml  rooms.json  run_server.py
client/: index.html
client/css/: style.css
client/js/: script.js
painting_app/: background.py  main.py
painting_app/models/: models.py
